매개변수 개념 정리

--- a/algorithm/kakao3.html
+++ b/algorithm/kakao3.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <script>
+        // cacheSize     cities     answer
         // 3	[Jeju, Pangyo, Seoul, NewYork, LA, Jeju, Pangyo, Seoul, NewYork, LA]	50
         // 3	[Jeju, Pangyo, Seoul, Jeju, Pangyo, Seoul, Jeju, Pangyo, Seoul]	21
         // 2	[Jeju, Pangyo, Seoul, NewYork, LA, SanFrancisco, Seoul, Rome, Paris, Jeju, NewYork, Rome]	60
@@ -14,9 +15,40 @@
         // 2	[Jeju, Pangyo, NewYork, newyork]	16
         // 0	[Jeju, Pangyo, Seoul, NewYork, LA]	25
 
-        function solution(cacheSize, cities){
-            let
+        function solution(cacheSize, cities){ //1번의 경우 3, Jeju 대입
+            let answer = 0; //임시로 초기 값 0으로 설정, 언제든지 재햘당 가능.
+            let arr = []; //arr이라는 배열 선언
+
+            //캐시 사이즈가 0일 경우
+            if (cacheSize === 0) return cities.length * 5;
+
+            for (let i = 0; i < cities.length; i++){ //i가 9보다 작으면 1을 더한다. 9는 cities의 수.(1번 예시)
+                //대소문자 구분이 없으므로 소문자로 통일
+                cities[i] = cities[i].toLowerCase(); //cities의 i번째 배열의 값을 가져온다. i가 1일 때 = cities[Jeju].(1번 예시)
+               
+                if (arr.includes(cities[i])){ //arr에 i값이 포함되어 있으면
+                    answer += 1; //answer에 1을 더한다.
+                    arr.splice(arr.indexOf(cities[i]), 1); //arr에 cities[Jeju]의 위치에서 1개 제거 = Jeju가 제거됨.(2번 예시)
+                    arr.push(cities[i]); //arr의 끝에 Jeju를 추가한다.
+                }
+                else { //arr에 i값이 포함되어있지 않으면
+                    if (arr.length < cacheSize){ //arr의 수가 3보다 작으면 (1번 예시)
+                        arr.push(cities[i]); //arr의 끝에 Jeju를 추가한다. (1번 예시)
+                    }
+                    else { //arr의 수가 3보다 크면 (1번 예시)
+                        arr.splice(0, 1); //arr의 0번째 인덱스에서 1개 제거. [Jeju, Pangyo, Seoul, NewYork]일 경우 Jeju 제거.
+                        arr.push(cities[i]); //arr의 끝에 LA를 추가한다.
+                    }
+                    answer += 5; //answer에 5를 더한다.
+                }
+            }
+
+            return answer; //answer값 최종 리턴.
         }
+
+        console.log(solution(3, [Jeju, Pangyo, Seoul, NewYork, LA, Jeju, Pangyo, Seoul, NewYork, LA])) //50 (1번)
+        console.log(solution(2, [Jeju, Pangyo, NewYork, newyork])) //16 (5번)
+        console.log(solution(0, [Jeju, Pangyo, Seoul, NewYork, LA])) //25 (6번)
     </script>
 </body>
 </html>
