--- a/practice/night_day.html
+++ b/practice/night_day.html
@@ -15,6 +15,18 @@
         document.querySelector('body').style.backgroundColor = 'white';
         document.querySelector('body').style.color = 'black';
     ">
+    <input id="night_day" type="button" value="Night" onclick="
+        var target = document.querySelector('body');
+        if(this.value === 'Night'){
+            target.style.backgroundColor = 'black';
+            target.style.color = 'white';
+            this.value = 'Day';
+        } else {
+            target.style.backgroundColor = 'white';
+            target.style.color = 'black';
+            this.value = 'Night';
+        }
+    ">
     <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
