--- a/practice/night_day.html
+++ b/practice/night_day.html
@@ -7,26 +7,7 @@
 </head>
 <body>
     <h1>Night & Day</h1>
-    <input id="night_day" type="button" value="Night" onclick="
-        var target = document.querySelector('body');
-        if(this.value === 'Night'){
-            target.style.backgroundColor = 'black';
-            target.style.color = 'white';
-            this.value = 'Day';
-
-            //a color change
-            var alist = document.querySelectorAll('a');
-            var i = 0;
-            while(i < alist.length){
-                alist[i].style.color = 'powderblue';
-                i = i + 1;
-            }
-        } else {
-            target.style.backgroundColor = 'white';
-            target.style.color = 'black';
-            this.value = 'Night';
-        }
-    ">
+    <input id="night_day" type="button" value="Night" onclick="nightDayHandler(this);">
     <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
@@ -34,17 +15,41 @@
     </ol>
     <h2>JavaScript</h2>
     <p>JavaScript (/ˈdʒɑːvəˌskrɪpt/[6]), often abbreviated as JS, is a high-level, dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming language. Alongside HTML and CSS, JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online programs, including video games. The majority of websites employ it, and all modern web browsers support it without the need for plug-ins by means of a built-in JavaScript engine. Each of the many JavaScript engines represent a different implementation of JavaScript, all based on the ECMAScript specification, with some engines not supporting the spec fully, and with many engines supporting additional features beyond ECMA.</p>
-    <input id="night_day2" type="button" value="Night" onclick="
-        var target = document.querySelector('body');
-        if(this.value === 'Night'){
-            target.style.backgroundColor = 'black';
-            target.style.color = 'white';
-            this.value = 'Day';
-        } else {
-            target.style.backgroundColor = 'white';
-            target.style.color = 'black';
-            this.value = 'Night';
+    <input id="night_day2" type="button" value="Night" onclick="">
+
+    <script>
+        function linksSetColor(color){
+            //a color change
+            var alist = document.querySelectorAll('a');
+            var i = 0;
+            while(i < alist.length){
+                alist[i].style.color = color;
+                i = i + 1;
+            }
         }
-    ">
+        function bodySetColor(color){
+            document.querySelector('body').style.color = color;
+        }
+        function bodySetBackgroundColor(color){
+            document.querySelector('body').style.backgroundColor = color;
+        }
+        function nightDayHandler(self) {
+            var target = document.querySelector('body');
+            //함수 내에서 this는 전역 객체를 가리킨다. 웹브라우저에서는 Window.
+            if(self.value === 'Night'){ 
+                target.style.color = 'white';
+                self.value = 'Day';
+                linksSetColor('powderblue');
+                bodySetBackgroundColor('black');
+                bodySetColor('white');
+            } else {
+                target.style.color = 'black';
+                self.value = 'Night';
+                linksSetColor('blue');
+                bodySetBackgroundColor('white');
+                bodySetColor('black');
+            }
+        }
+    </script>
 </body>
 </html>
